think i fixed layout issues..

--- a/client/styles/components/ad-space.styl
+++ b/client/styles/components/ad-space.styl
@@ -6,25 +6,16 @@
 .results
 	.ad_space
 		display none
-	
+
 #cd-google-map
 	.ad_space
 		display block
-	
-@media only screen and (min-width: 768px)
-	.ad_space
-		margin 12px auto 12px
-		
 
 @media only screen and (min-width: 1024px)
 	.results
 		.ad_space
 			display block
-		
+
 	#cd-google-map
 		.ad_space
 			display none
-	
-@media only screen and (min-width: 1200px)
-	.ad_space
-		margin 12px auto 25px
